[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-python"
version = "0.1.0"
description = "A local Python coding agent built with the OpenAI Agents SDK."
requires-python = ">=3.10"
dependencies = [
  "catboost>=1.2.0",
  "altair>=6.0.0",
  "bokeh>=3.0.0",
  "duckdb>=1.0.0",
  "fastapi>=0.110.0",
  "folium>=0.20.0",
  "geopandas>=1.0.0",
  "kaleido>=1.0.0",
  "lightgbm>=4.0.0",
  "missingno>=0.5.0",
  "openai-agents>=0.3.0",
  "openpyxl>=3.1.0",
  "optuna>=4.0.0",
  "pandas>=2.0.0",
  "pmdarima>=2.0.0",
  "polars>=1.0.0",
  "prophet>=1.1.0",
  "pyarrow>=15.0.0",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.4.0",
  "seaborn>=0.13.0",
  "shap>=0.45.0",
  "sktime>=0.30.0",
  "statsmodels>=0.14.0",
  "uvicorn>=0.30.0",
  "xgboost>=2.0.0",
  "yellowbrick>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".test-tmp"]
